<resources>
    <string name="app_name">01</string>
    <string name="button">02</string>
    <string name="count">COUNT</string>
    <string name="app">心臓マッサージAPP</string>
    <string name="B_mode">Button</string>
    <string name="A_mode">Button</string>
    <string name="textview">TextView</string>
    <string name="noAss">教師なしモード</string>
    <string name="second">Second</string>
    <string name="StartButton">Button</string>
    <string name="bmode_text">Bmode_text</string>
    <string name="b_mode">B_MODE</string>
    <string name="a_mode">A_MODE</string>
    <string name="back">Back</string>
    <string name="title">胸に手をあてて</string>
    <string name="softwere_version_1_0">softwere_version:1.0</string>
    <string name="Softwere_version_1_0">Softwere_version_1_0</string>
    <string name="software_version_1_0">SOFTWARE_VERSION:1.0</string>
    <string name="sample">sample</string>
    <string name="mute">MUTE</string>
    <string name="circle">CIRCLE</string>
    <string name="point_power">POINT_POWER</string>
    <string name="point_tempo">POINT_TEMPO</string>
    <string name="FeedBackText">FEEDBACKTEXT</string>
    <string name="sub_title">- A cardiac massage practice application.</string>
    <string name="version">SOFTWARE_VERSION_1.0</string>
    <string name="base">BASE</string>
    <string name="AnnounceText">ANNOUNCETEXT</string>
    <string name="soundmute">soundmute</string>
    <string name="manual">MANUAL</string>
    <string name="胸に手をあてて">胸に手をあてて</string>
    <string name="show_manual">SHOW MANUAL</string>
    <string name="top_bg">TOP_BG</string>
    <string name="countDownText">COUNTDOWNTEXT</string>
    <string name="manual_title">アプリ概要</string>
    <string name="manual_text">MANUAL_TEXT</string>
    <string name="outline_image">OUTLINE_IMAGE</string>
    <string name="allow1">ALLOW1</string>
    <string name="allow2">ALLOW2</string>
    <string name="indicator">INDICATOR</string>
    <string name="challenge_text">CHALLENGE_TEXT</string>
    <string name="result_text">RESULT_TEXT</string>
    <string name="summary_pp">SUMMARY_PP</string>
    <string name="summary_pt">SUMMARY_PT</string>
    <string name="triangle2">triangle2</string>
    <string name="triangle1">TRIANGLE1</string>
    <string name="triangle_test">TRIANGLE_TEST</string>
    <string name="manual_practice">MANUAL_PRACTICE</string>
    <string name="board">BOARD</string>
    <string name="gonexr">GONEXT</string>
    <string name="mutebutton">MUTEBUTTON</string>
    <string name="sound">TODO</string>
    <string name="test">TODOTEST</string>
    <string name="backbutton">BUCKBUTTON</string>
    <string name="buck"><![CDATA[< 練習を終える]]></string>
    <string name="buck2"><![CDATA[メニューに戻る >]]></string>
    <string name="buck3"><![CDATA[< メニューに戻る]]></string>
</resources>
