<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubActivity01"
    android:background="@drawable/top_bg_a">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/version"
        android:textStyle="bold"
        android:textColor="#565254"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/B_mode"
        android:layout_width="370dp"
        android:layout_height="90dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:background="#00000000"
        android:text="@string/B_mode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/A_mode"
        android:layout_width="330dp"
        android:layout_height="90dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="140dp"
        android:background="#00000000"
        android:text="@string/A_mode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/manual"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="250dp"
        android:background="#00000000"
        android:text="@string/manual"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>